# python-cli

./: README.md  setup.cfg
definition/: __init__.py  __main__.py  cli.py
note/: __init__.py  __main__.py  cli.py  commands.py
tests/: todo_tests.py
todo/: __init__.py  cli.py  commands.py  task.py
translate/: __init__.py  __main__.py  cli.py
