[metadata]
name = python-cli
version = 0.0.4

[options]
packages = definition, todo, note
install_requires = 
    rich
    typer
    appdirs
    larousse-api-sunbro
    importlib; python_version == "3.9.12"

[options.entry_points]
console_scripts =
    definition = definition.__main__:main
    todo = todo.__main__:main
    note = note.__main__:main
